fix styling issues w/ overflow label

--- a/js/components/Email/EmailPanel/react-select-hack.css
+++ b/js/components/Email/EmailPanel/react-select-hack.css
@@ -18,20 +18,14 @@
 .nameOption {
   display: flex;
   align-items: center;
-  height: 35px;
   padding: 0 1rem;
-  border-bottom: 1px solid #ddd;
-  overflow-y: scroll;
-}
+/*  border-bottom: 1px solid #ddd;
+*/}
 
 .nameHeader {
-  height: 25px;
-  background-color: #eee;
-  font-weight: bold;
+/*  background-color: #eee;
+*/  font-weight: bold;
   font-size: .85;
-}
-.nameOptionFocused {
-  background-color: rgba(0, 126, 255, 0.1);
 }
 
 .nameOptionSelected {
